<?xml version="1.0" encoding="utf-8"?>
<!--
    TunesRemote+ - http://code.google.com/p/tunesremote-plus/
    
    Copyright (C) 2008 Jeffrey Sharkey, http://jsharkey.org/
    Copyright (C) 2010 TunesRemote+, http://code.google.com/p/tunesremote-plus/
    
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    
    The Initial Developer of the Original Code is Jeffrey Sharkey.
    Portions created by Jeffrey Sharkey are
    Copyright (C) 2008. Jeffrey Sharkey, http://jsharkey.org/
    All Rights Reserved.
-->
<resources>

    <string name="app_name">TunesRemote+</string>
    <string name="app_desc">Remote control for DACP-compatible desktop music players such as Apple iTunes and
        MonkeyTunes for MediaMonkey
    </string>
    <string name="search_label">TunesRemote+ Search</string>
    <string name="search_hint">Music keywords</string>
    <string name="search_empty">No search results found</string>
    <string name="no_servers_found">No servers found</string>
    <string name="nowplaying_title">Now Playing</string>
    <string name="nowplaying_nothing_playing">Nothing Playing</string>
    <string name="albums_empty">No albums found\nfor this artist.</string>
    <string name="albums_menu_play">Play album</string>
    <string name="albums_menu_browse">Browse Tracks</string>
    <string name="albums_album_caption">%d tracks</string>
    <string name="playlists_empty">No playlists found</string>
    <string name="playlists_playlist_caption">%d tracks</string>
    <string name="playlists_menu_play">Play playlist</string>
    <string name="playlists_menu_browse">Browse Playlist</string>
    <string name="playlists_menu_queue">Queue Playlist</string>
    <string name="artists_empty">No artists found\nin this library.</string>
    <string name="artists_menu_play">Play artist</string>
    <string name="artists_menu_browse">Browse albums</string>
    <string name="notif_title">Remote music playing</string>
    <string name="control_menu_search">Search</string>
    <string name="control_menu_artists">Artists</string>
    <string name="control_menu_playlists">Playlists</string>
    <string name="control_menu_albums">Albums</string>
    <string name="control_menu_picklibrary">Pick Library&#8230;</string>
    <string name="control_menu_addlibrary">Add Library&#8230;</string>
    <string name="control_menu_repeat_none">No repeat</string>
    <string name="control_menu_repeat_one">Repeat single</string>
    <string name="control_menu_repeat_all">Repeat all</string>
    <string name="control_menu_shuffle_on">Shuffle is on</string>
    <string name="control_menu_shuffle_off">Shuffle is off</string>
    <string name="control_menu_nowplaying">Now Playing</string>
    <string name="control_menu_speakers">Speakers</string>
    <string name="control_menu_clearcue">Clear Cue</string>
    <string name="library_menu_refresh">Refresh</string>
    <string name="library_menu_manual">Manual Add</string>
    <string name="library_menu_forget">Forget All</string>
    <string name="library_forget">Are you sure you want to forget all libraries ever paired with?</string>
    <string name="library_forget_pos">Yes, forget</string>
    <string name="library_forget_neg">No</string>
    <string name="library_manual_pos">Connect</string>
    <string name="library_manual_neg">Cancel</string>
    <string name="tracks_empty">No tracks found\nfor this album.</string>
    <string name="pairing_title">Pairing with Library</string>
    <string name="pairing_caption1">Your Android device is now in pairing mode, and should appear in your desktop/laptop
        media player. You\'ll need to enter a 4-digit code to finish the pairing process:
    </string>
    <string name="pairing_caption2">After entering the code on your desktop/laptop, this window should disappear. If you
        get stuck, just tap the back button to cancel.
    </string>
    <string name="wizard_title1">TunesRemote+ 2.5.3 helps you remote control your DACP-compatible desktop or laptop
        media player, such as Apple iTunes\u2122,MonkeyTunes for MediaMonkey, and Telescope for Songbird.
    </string>
    <string name="wizard_title2">It lets you easily browse your albums, including full-text search from a distance.
    </string>
    <string name="wizard_eula">Before we get started, we need to get some legal information out of the
        way:\n\nTunesRemote+ provides its service to you subject to the following conditions. You accept these
        conditions by using
        TunesRemote+.\n\nThis program and all information, content, materials, products and services included are
        provided by TunesRemote+ on an \'as is\' basis without warranties or conditions of any kind.\n\nNeither
        TunesRemote+ nor its
        author will not be liable for any damages of any kind arising from the use of this program or from any
        information, content, materials, products or services made available through this program.\n\niTunes is a
        registered
        trademark of Apple, Inc., registered in the U.S. and other countries. This program makes no claim to be either
        authorized or
        approved by Apple, Inc.
    </string>
    <string name="wizard_pos">Agree</string>
    <string name="wizard_neg">Cancel</string>
    <string name="dia_ipaddress">IP address</string>
    <string name="dia_code">Pairing code</string>
    <string name="item_fetch">Fetching more search results&#8230;</string>
    <string name="item_network_title">Searching network for libraries&#8230;</string>
    <string name="item_network_caption">Open server application and make sure you\'re on the same Wifi network. If
        having trouble, try cycling your Wifi, opening port 3689 in your firewall, or tapping Menu and Refresh.
    </string>
    <string name="toast_volume_title">Remote volume</string>
    <string name="pref_fade">fade</string>
    <string name="pref_fadeupnew">fadeupnew</string>
    <string name="pref_vibrate">vibrate</string>
    <string name="pref_searchmax">searchmax</string>
    <string name="pref_volumeincrement">volumeincrement</string>
    <string name="pref_autopause">autopause</string>
    <string name="pref_cropimage">cropimage</string>
    <!-- Used for the new crop image option, without throwing exceptions -->
    <string name="pref_cropimage_2">cropimage2</string>
    <string name="pref_fullscreen">fullscreen</string>
    <string name="pref_notify">notification</string>
    <string name="pref_notify_summary_enabled">Show a notification with controls in the status bar</string>
    <string name="pref_notify_summary_disabled">Disable \"Stay connected\" to enable notifications</string>

    <string-array name="art_selections">
        <item>Fill screen</item>
        <item>Stretch to screen</item>
        <item>Crop inside screen</item>
    </string-array>
    <string-array name="art_selections_int">
        <item>fill</item>
        <item>stretch</item>
        <item>crop</item>
    </string-array>

    <string name="artists_menu_queue">Queue Artist</string>
    <string name="albums_menu_queue">Queue Album</string>
    <string name="tracks_menu_play">Play Track</string>
    <string name="tracks_menu_queue">Queue Track</string>
    <string name="search_menu_play_found">Play Found Tracks</string>
    <string name="search_menu_open_album">Open Album</string>
    <string name="search_menu_open_artist">Open Artist</string>
    <string name="speakers_dialog_computer_speaker">Computer Speaker</string>
    <string name="speakers_dialog_airport_express">Airport Express</string>
    <string name="control_menu_settings">Settings</string>
    <string name="control_menu_about">About</string>
    <string name="wifi_disabled_title">Wifi is turned off</string>
    <string name="wifi_disabled">Please make sure to turn on your wifi in Settings.</string>
    <string name="no_network_title">No wifi connection</string>
    <string name="no_network">Currently not connected to a wifi network. Please check your wifi settings.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="control_menu_library">Music Library</string>
    <string name="control_menu_local">Play song on device</string>
    <string name="cancel">Cancel</string>
    <string name="notify_play">Play</string>
    <string name="notify_pause">Pause</string>
    <string name="notify_next">Next</string>
    <string name="pref_showtoast">preftoast</string>
    <string name="pref_invertgestures">invertgestures</string>
    <string name="pref_art_title">Album art display</string>
    <string name="pref_art_summary">How album art fills the screen</string>
    <string name="pref_showrating">showrating</string>
    <string name="notify_dialog_title">Using notifications</string>
    <string name="notify_dialog_explain">The notification allows you to control your music outside the app itself. To
        disconnect and hide the notification once you are done using it, press the cross at the right edge.
    </string>
    <string name="pref_nowplayingaction">nowplaying</string>
    <string-array name="pref_npvalues">
        <item>nowplaying</item>
        <item>playlist</item>
    </string-array>
    <string-array name="pref_npentries">
        <item>Current Album</item>
        <item>Selected Playlist</item>
    </string-array>
    <string name="track">Track</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>

</resources>